--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -17,8 +17,10 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            cd ~/ApniEstate/backend
-            git pull origin main
-            npm install --production
-            pm2 restart aebe
+script: |
+  set -e
+  cd ~/ApniEstate/backend
+  git pull origin main
+  /home/ubuntu/.nvm/versions/node/v24.13.0/bin/npm install --production
+  /home/ubuntu/.nvm/versions/node/v24.13.0/bin/pm2 restart aebe
+
