--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,8 +21,11 @@ IMAGEKIT_PRIVATE_KEY=your_private_key_here
 IMAGEKIT_URL_ENDPOINT=https://ik.imagekit.io/your_id
 
 # Admin Credentials
+ADMIN_EMAIL_1=ceo@apniestate.com
+ADMIN_PASSWORD_1=apniestate1
+ADMIN_EMAIL_2=admin@apniestate.com
+ADMIN_PASSWORD_2=apniestate2
 ADMIN_EMAIL=admin@example.com
-ADMIN_PASSWORD=your_secure_password_here
 
 # Email (Brevo/SMTP) Configuration
 SMTP_USER=your_smtp_user
